SERVER-12724 fixed index bounds for 2d