src/mongo/db/exec/2dcommon.h
@@ -202,8 +202,6 @@ namespace twod_exec {
         // Are we finished getting points?
         virtual bool moreToDo();
 
-        Box makeBox(const GeoHash &hash) const;
-
         // Fills the stack, but only checks a maximum number of maxToCheck points at a time.
         // Further calls to this function will continue the expand/check neighbors algorithm.
         virtual void fillStack(int maxToCheck, int maxToAdd = -1, bool onlyExpand = false);
