src/mongo/db/query/explain_plan.cpp
@@ -30,6 +30,7 @@
 
 #include <boost/algorithm/string/join.hpp>
 
+#include "mongo/db/exec/2dcommon.h"
 #include "mongo/db/query/stage_types.h"
 #include "mongo/db/query/type_explain.h"
 #include "mongo/util/mongoutils/str.h"
@@ -232,8 +233,19 @@ namespace mongo {
             res->setCursor("GeoBrowse-" + nStats->type);
             res->setNScanned(leaf->common.works);
             res->setNScannedObjects(leaf->common.works);
-            // TODO: only adding empty index bounds for backwards compatibility.
-            res->setIndexBounds(BSONObj());
+
+            // Generate index bounds from prefixes.
+            GeoHashConverter converter(nStats->converterParams);
+            BSONObjBuilder bob;
+            BSONArrayBuilder arrayBob(bob.subarrayStart(nStats->field));
+            for (size_t i = 0; i < nStats->expPrefixes.size(); ++i) {
+                const GeoHash& prefix = nStats->expPrefixes[i];
+                Box box = converter.unhashToBox(prefix);
+                arrayBob.append(box.toBSON());
+            }
+            arrayBob.doneFast();
+            res->setIndexBounds(bob.obj());
+
             // TODO: Could be multikey.
             res->setIsMultiKey(false);
             res->setIndexOnly(false);
@@ -457,6 +469,20 @@ namespace mongo {
             bob->appendNumber("alreadyHasObj", spec->alreadyHasObj);
             bob->appendNumber("forcedFetches", spec->forcedFetches);
             bob->appendNumber("matchTested", spec->matchTested);
+        }
+        else if (STAGE_GEO_2D == stats.stageType) {
+            TwoDStats* spec = static_cast<TwoDStats*>(stats.specific.get());
+            bob->append("geometryType", spec->type);
+            bob->append("field", spec->field);
+
+            // Generate verbose index bounds from prefixes
+            GeoHashConverter converter(spec->converterParams);
+            BSONArrayBuilder arrayBob(bob->subarrayStart("boundsVerbose"));
+            for (size_t i = 0; i < spec->expPrefixes.size(); ++i) {
+                const GeoHash& prefix = spec->expPrefixes[i];
+                Box box = converter.unhashToBox(prefix);
+                arrayBob.append(box.toString());
+            }
         }
         else if (STAGE_GEO_NEAR_2D == stats.stageType) {
             TwoDNearStats* spec = static_cast<TwoDNearStats*>(stats.specific.get());
